samples/_failures_safe/1761074141_fedf18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1bd4e05.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c1bd4e05.c:171:5: error: expected ‘,’ or ‘;’ at end of input
  171 |     int column = 1
      |     ^~~
./samples/SAFE/__tmp_c1bd4e05.c:171:5: error: expected declaration or statement at end of input
